<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:gravity="center">
    <Button
        android:id="@+id/ex_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/examination"/>
    <Button
        android:id="@+id/tick_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket"/>
    <Button
        android:id="@+id/fines_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fines"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/gibbd_but"
        android:text="@string/gibdd"/>

    <Button
        android:id="@+id/exit_app_button"
        android:text="@string/exit_app_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
